--- a/hadoop/Dockerfile
+++ b/hadoop/Dockerfile
@@ -78,7 +78,7 @@ RUN set -eux && \
     chown hdfs /home/hdfs/.ssh && \
     chown yarn /home/yarn/.ssh && \
     chmod 777  /entrypoint.sh && \
-    chmod 777  /init.sh
+    chmod 777  /init.sh && \
     chmod 0700 /root/.ssh \
                /home/hdfs/.ssh \
                /home/yarn/.ssh
