--- a/hive/Dockerfile
+++ b/hive/Dockerfile
@@ -50,15 +50,15 @@ RUN set -eux && \
     yum install -y wget && \
 	wget https://archive.apache.org/dist/hive/hive-$HIVE_VERSION/apache-hive-$HIVE_VERSION-bin.tar.gz && \
 	tar -xzvf apache-hive-$HIVE_VERSION-bin.tar.gz && \
-	mkdir -p hive && \
-	mv apache-hive-$HIVE_VERSION-bin hive && \
+#	mkdir -p hive && \
+#	mv apache-hive-$HIVE_VERSION-bin hive && \
 	rm apache-hive-$HIVE_VERSION-bin.tar.gz && \
-	wget https://repo1.maven.org/maven2/mysql/mysql-connector-java/8.0.20/mysql-connector-java-8.0.20.jar -O $HIVE_HOME/lib/mysql-connector-java-8.0.20.jar && \
+	wget https://repo1.maven.org/maven2/mysql/mysql-connector-java/8.0.20/mysql-connector-java-8.0.20.jar -O /apache-hive-3.1.2-bin/lib/mysql-connector-java-8.0.20.jar && \
 	yum remove -y wget && \
 	yum clean all && \
 	rm -rf /var/lib/apt/lists/*
 
 #ENV JAVA_HOME="${JAVA_HOME:-/usr}"
 ENV HADOOP_HOME /hadoop
-ENV HIVE_HOME /hive
+ENV HIVE_HOME /apache-hive-3.1.2-bin
 #ENV PATH $JAVA_HOME/bin:$PATH
