--- a/hive/Dockerfile
+++ b/hive/Dockerfile
@@ -61,7 +61,7 @@ RUN set -eux && \
 	rm -rf /hive/lib/guava-19.0.jar && \
 #	mv apache-hive-$HIVE_VERSION-bin hive && \
 	rm apache-hive-$HIVE_VERSION-bin.tar.gz && \
-	wget https://repo1.maven.org/maven2/mysql/mysql-connector-java/8.0.20/mysql-connector-java-8.0.20.jar -O /apache-hive-3.1.2-bin/lib/mysql-connector-java-8.0.20.jar && \
+	wget https://repo1.maven.org/maven2/mysql/mysql-connector-java/8.0.20/mysql-connector-java-8.0.20.jar -O /hive/lib/mysql-connector-java-8.0.20.jar && \
 	yum remove -y wget && \
 	yum clean all && \
 	rm -rf /var/lib/apt/lists/*
