--- a/hadoop/Dockerfile
+++ b/hadoop/Dockerfile
@@ -28,6 +28,7 @@ WORKDIR /
 RUN set -eux && \
     yum install -y openssh-server openssh-clients tar which
 
+#hadoop
 RUN set -eux && \
     yum install -y wget hostname && \
     # --max-redirect - some apache mirrors redirect a couple times and give you the latest version instead
@@ -87,12 +88,38 @@ RUN set -eux && \
                /home/hdfs/.ssh \
                /home/yarn/.ssh
 
+#hive
+RUN set -eux && \
+    yum install -y wget && \
+	wget https://mirrors.tuna.tsinghua.edu.cn/apache/hive/hive-3.1.2/apache-hive-3.1.2-bin.tar.gz && \
+	tar -xzvf apache-hive-$HIVE_VERSION-bin.tar.gz && \
+	ln -sv "apache-hive-3.1.2-bin" hive && \
+	cp /hadoop/share/hadoop/common/lib/guava-27.0-jre.jar /hive/lib/ && \
+	rm -rf /hive/lib/guava-19.0.jar && \
+#	mv apache-hive-$HIVE_VERSION-bin hive && \
+	rm apache-hive-$HIVE_VERSION-bin.tar.gz && \
+	wget https://repo1.maven.org/maven2/mysql/mysql-connector-java/8.0.20/mysql-connector-java-8.0.20.jar -O /hive/lib/mysql-connector-java-8.0.20.jar && \
+	yum remove -y wget && \
+	yum clean all && \
+	rm -rf /var/lib/apt/lists/*
+
+
+COPY ./hive-site.xml /hive/conf/hive-site.xml
+
+RUN set -eux && \
+    /hadoop/bin/hadoop fs -mkdir -p /tmp && \
+    /hadoop/bin/hadoop fs -mkdir -p /user/hive/warehouse && \
+    /hadoop/bin/hadoop fs -chmod g+w /tmp && \
+    /hadoop/bin/hadoop fs -chmod g+w /user/hive/warehouse
+
 ENV HDFS_NAMENODE_USER=hdfs
 ENV HDFS_SECONDARYNAMENODE_USER=hdfs
 ENV HDFS_DATANODE_USER=hdfs
 ENV YARN_RESOURCEMANAGER_USER=yarn
 ENV YARN_NODEMANAGER_USER=yarn
-
+ENV HADOOP_HOME /hadoop
+ENV HADOOP_CONF_DIR /hadoop/etc/hadoop
+ENV HIVE_HOME /hive
 #EXPOSE 8020 8042 8088 9000 10020 19888 50010 50020 50070 50075 50090
 # Hadoop 3.0 changed ports :-(
 EXPOSE 8020 8042 8088 9000 9868 9870 10020 19888 50010 50020 50090
