--- a/hadoop/Dockerfile
+++ b/hadoop/Dockerfile
@@ -106,7 +106,7 @@ RUN set -eux && \
 	rm -rf /var/lib/apt/lists/*
 
 
-COPY ./hive-site.xml /hive/conf/hive-site.xml
+#COPY ./hive-site.xml /hive/conf/hive-site.xml
 
 RUN set -eux && \
     /hadoop/bin/hadoop fs -mkdir -p /tmp && \
