--- a/hadoop/Dockerfile
+++ b/hadoop/Dockerfile
@@ -120,7 +120,7 @@ ENV HDFS_DATANODE_USER=hdfs
 ENV YARN_RESOURCEMANAGER_USER=yarn
 ENV YARN_NODEMANAGER_USER=yarn
 ENV HADOOP_HOME /hadoop
-ENV HADOOP_CONF_DIR /hadoop/etc/hadoop
+#ENV HADOOP_CONF_DIR /hadoop/etc/hadoop
 ENV HIVE_HOME /hive
 #EXPOSE 8020 8042 8088 9000 10020 19888 50010 50020 50070 50075 50090
 # Hadoop 3.0 changed ports :-(
