--- a/hadoop/Dockerfile
+++ b/hadoop/Dockerfile
@@ -121,7 +121,7 @@ ENV YARN_RESOURCEMANAGER_USER=yarn
 ENV YARN_NODEMANAGER_USER=yarn
 ENV HADOOP_HOME /hadoop
 ENV HADOOP_CONF_DIR /hadoop/etc/hadoop
-ENV HIVE_HOME /hive
+#ENV HIVE_HOME /hive
 #EXPOSE 8020 8042 8088 9000 10020 19888 50010 50020 50070 50075 50090
 # Hadoop 3.0 changed ports :-(
 EXPOSE 8020 8042 8088 9000 9868 9870 10020 19888 50010 50020 50090
