--- a/flink/Dockerfile
+++ b/flink/Dockerfile
@@ -58,13 +58,6 @@ WORKDIR $FLINK_HOME
 
 # Install Flink
 RUN set -ex; \
-  wget -nv -O https://repo.maven.apache.org/maven2/org/apache/flink/flink-sql-connector-hive-3.1.2_2.11/1.11.2/flink-sql-connector-hive-3.1.2_2.11-1.11.2.jar \
-  wget -nv -O https://repo1.maven.org/maven2/org/apache/flink/flink-connector-hive_2.11/1.11.2/flink-connector-hive_2.11-1.11.2.jar \
-  wget -nv -O https://repo1.maven.org/maven2/org/apache/hive/hive-exec/3.1.2/hive-exec-3.1.2.jar \
-  wget -nv -O https://repo1.maven.org/maven2/org/apache/thrift/libfb303/0.9.3/libfb303-0.9.3.jar \
-  cp /opt/flink/flink-connector-hive_2.11-1.11.2.jar /opt/flink/lib/ \
-  cp /opt/flink/hive-exec-3.1.2.jar /opt/flink/lib/ \
-  cp /opt/flink/libfb303-0.9.3.jar /opt/flink/lib/ \
   wget -nv -O flink.tgz "$FLINK_TGZ_URL"; \
   \
   if [ "$CHECK_GPG" = "true" ]; then \
@@ -86,6 +79,20 @@ RUN set -ex; \
   rm flink.tgz; \
   \
   chown -R flink:flink .;
+
+#flink插件包
+RUN set -eux && \
+  yum install -y wget \
+  wget -nv -O https://repo.maven.apache.org/maven2/org/apache/flink/flink-sql-connector-hive-3.1.2_2.11/1.11.2/flink-sql-connector-hive-3.1.2_2.11-1.11.2.jar \
+  wget -nv -O https://repo1.maven.org/maven2/org/apache/flink/flink-connector-hive_2.11/1.11.2/flink-connector-hive_2.11-1.11.2.jar \
+  wget -nv -O https://repo1.maven.org/maven2/org/apache/hive/hive-exec/3.1.2/hive-exec-3.1.2.jar \
+  wget -nv -O https://repo1.maven.org/maven2/org/apache/thrift/libfb303/0.9.3/libfb303-0.9.3.jar \
+  cp /opt/flink/flink-connector-hive_2.11-1.11.2.jar /opt/flink/lib/ \
+  cp /opt/flink/hive-exec-3.1.2.jar /opt/flink/lib/ \
+  cp /opt/flink/libfb303-0.9.3.jar /opt/flink/lib/ \
+  yum remove -y wget && \
+  yum clean all && \
+  rm -rf /var/lib/apt/lists/*
 
 # Configure container
 COPY docker-entrypoint.sh /
