--- a/flink/Dockerfile
+++ b/flink/Dockerfile
@@ -81,8 +81,8 @@ RUN set -ex; \
   chown -R flink:flink .;
 
 #flink插件包
-RUN set -eux && \
-  yum install -y wget \
+RUN set -eux \
+  apt-get -y install wget \
   wget -nv -O https://repo.maven.apache.org/maven2/org/apache/flink/flink-sql-connector-hive-3.1.2_2.11/1.11.2/flink-sql-connector-hive-3.1.2_2.11-1.11.2.jar \
   wget -nv -O https://repo1.maven.org/maven2/org/apache/flink/flink-connector-hive_2.11/1.11.2/flink-connector-hive_2.11-1.11.2.jar \
   wget -nv -O https://repo1.maven.org/maven2/org/apache/hive/hive-exec/3.1.2/hive-exec-3.1.2.jar \
@@ -90,8 +90,7 @@ RUN set -eux && \
   cp /opt/flink/flink-connector-hive_2.11-1.11.2.jar /opt/flink/lib/ \
   cp /opt/flink/hive-exec-3.1.2.jar /opt/flink/lib/ \
   cp /opt/flink/libfb303-0.9.3.jar /opt/flink/lib/ \
-  yum remove -y wget && \
-  yum clean all && \
+  apt-get remove -y wget && \
   rm -rf /var/lib/apt/lists/*
 
 # Configure container
