--- a/flink/Dockerfile
+++ b/flink/Dockerfile
@@ -126,10 +126,9 @@ RUN set -eux && \
 
 #hadoop--->flink
 RUN set -eux && \
-    cp -r /opt/flink/hadoop/share/hadoop/hdfs /opt/flink/lib/ && \
-    cp -r /opt/flink/hadoop/share/hadoop/tools /opt/flink/lib/ && \
-    cp -r /opt/flink/hadoop/share/hadoop/yarn /opt/flink/lib/ && \
-    rm -rf /opt/flink/lib/hdfs/lib/commons-cli-1.2.jar
+    cp -r /opt/flink/hadoop/share/hadoop/ /opt/flink/lib/ && \
+    rm -rf /opt/flink/lib/hdfs/lib/commons-cli-1.2.jar && \
+    rm -rf /opt/flink/lib/common/lib/commons-cli-1.2.jar
 
 # Configure container
 COPY docker-entrypoint.sh /
