--- a/flink/Dockerfile
+++ b/flink/Dockerfile
@@ -126,7 +126,7 @@ RUN set -eux && \
 
 #hadoop--->flink
 RUN set -eux && \
-    cp -r /opt/flink/hadoop/share/hadoop/ /opt/flink/lib/ && \
+    cp -r /opt/flink/hadoop/share/hadoop/* /opt/flink/lib/ && \
     rm -rf /opt/flink/lib/hdfs/lib/commons-cli-1.2.jar && \
     rm -rf /opt/flink/lib/common/lib/commons-cli-1.2.jar
 
