--- a/flink/Dockerfile
+++ b/flink/Dockerfile
@@ -91,12 +91,12 @@ RUN set -eux && \
   wget https://repo1.maven.org/maven2/org/apache/flink/flink-sql-connector-kafka_2.11/1.11.2/flink-sql-connector-kafka_2.11-1.11.2.jar && \
   wget https://repo1.maven.org/maven2/com/alibaba/ververica/flink-sql-connector-mysql-cdc/1.1.0/flink-sql-connector-mysql-cdc-1.1.0.jar && \
   wget https://repo1.maven.org/maven2/com/alibaba/ververica/flink-format-changelog-json/1.1.0/flink-format-changelog-json-1.1.0.jar && \
-  wget https://repo1.maven.org/maven2/org/apache/flink/flink-connector-elasticsearch7_2.11/1.11.2/flink-connector-elasticsearch7_2.11-1.11.2.jar && \
+#  wget https://repo1.maven.org/maven2/org/apache/flink/flink-connector-elasticsearch7_2.11/1.11.2/flink-connector-elasticsearch7_2.11-1.11.2.jar && \
   cp /opt/flink/flink-sql-connector-hive-3.1.2_2.11-1.11.2.jar /opt/flink/lib/ && \
   cp /opt/flink/flink-format-changelog-json-1.1.0.jar /opt/flink/lib/ && \
   cp /opt/flink/flink-sql-connector-mysql-cdc-1.1.0.jar /opt/flink/lib/ && \
-  cp /opt/flink/flink-sql-connector-kafka_2.11-1.11.2.jar /opt/flink/lib/ && \
-  cp /opt/flink/flink-connector-elasticsearch7_2.11-1.11.2.jar /opt/flink/lib/
+  cp /opt/flink/flink-sql-connector-kafka_2.11-1.11.2.jar /opt/flink/lib/ &&
+#  cp /opt/flink/flink-connector-elasticsearch7_2.11-1.11.2.jar /opt/flink/lib/
 #  apt-get remove -y wget && \
 #  rm -rf /var/lib/apt/lists/*
 
