修改flink镜像为1.12.0

--- a/flink/Dockerfile
+++ b/flink/Dockerfile
@@ -100,7 +100,9 @@ RUN set -eux && \
   cp /opt/flink/flink-sql-connector-kafka_2.11-1.12.0.jar /opt/flink/lib/ && \
   cp /opt/flink/mysql-connector-java-8.0.20.jar /opt/flink/lib/ && \
   cp /opt/flink/flink-connector-jdbc_2.11-1.12.0.jar /opt/flink/lib/ && \
-  cp /opt/flink/flink-sql-connector-elasticsearch7_2.11-1.12.0.jar /opt/flink/lib/
+  cp /opt/flink/flink-sql-connector-elasticsearch7_2.11-1.12.0.jar /opt/flink/lib/ && \
+  mkdir /opt/flinktmp && \
+  cp -r /opt/flink/ /opt/flinktmp
 #  apt-get remove -y wget && \
 #  rm -rf /var/lib/apt/lists/*
 
