更新flink版本为1.12.2 cdc版本1.3.0 增加hudi

--- a/flink/Dockerfile
+++ b/flink/Dockerfile
@@ -60,7 +60,7 @@ RUN groupadd --system --gid=9999 flink && \
     useradd --system --home-dir $FLINK_HOME --uid=9999 --gid=flink flink
 WORKDIR $FLINK_HOME
 
-# Install Flink
+## Install Flink
 RUN set -ex; \
   wget -nv -O flink.tgz "$FLINK_TGZ_URL"; \
   \
