--- a/flink/Dockerfile
+++ b/flink/Dockerfile
@@ -96,7 +96,7 @@ RUN set -eux && \
   wget https://repo.maven.apache.org/maven2/org/apache/flink/flink-sql-connector-elasticsearch7_2.11/1.12.2/flink-sql-connector-elasticsearch7_2.11-1.12.2.jar && \
   wget https://repo.maven.apache.org/maven2/org/apache/hudi/hudi-flink-bundle_2.11/0.8.0/hudi-flink-bundle_2.11-0.8.0.jar && \
   #wget https://repo.maven.apache.org/maven2/org/apache/hudi/hudi-flink_2.11/0.8.0/hudi-flink_2.11-0.8.0.jar && \
-  wget https://repo.maven.apache.org/maven2/org/apache/flink/flink-parquet/1.8.3/flink-parquet-1.8.3.jar && \
+  wget https://repo.maven.apache.org/maven2/org/apache/flink/flink-parquet_2.11/1.12.2/flink-parquet_2.11-1.12.2.jar && \
   wget https://repo.maven.apache.org/maven2/org/apache/flink/flink-avro/1.9.3/flink-avro-1.9.3.jar && \
   cp /opt/flink/flink-sql-connector-hive-3.1.2_2.11-1.12.2.jar /opt/flink/lib/ && \
   cp /opt/flink/flink-format-changelog-json-1.3.0.jar /opt/flink/lib/ && \
@@ -107,7 +107,7 @@ RUN set -eux && \
   cp /opt/flink/flink-sql-connector-elasticsearch7_2.11-1.12.2.jar /opt/flink/lib/ && \
   cp /opt/flink/hudi-flink-bundle_2.11-0.8.0.jar /opt/flink/lib/ && \
   #cp /opt/flink/hudi-flink_2.11-0.8.0.jar /opt/flink/lib/ && \
-  cp /opt/flink/flink-parquet-1.8.3.jar /opt/flink/lib/ && \
+  cp /opt/flink/flink-parquet_2.11-1.12.2.jar /opt/flink/lib/ && \
   cp /opt/flink/flink-avro-1.9.3.jar /opt/flink/lib/ && \
 #  mkdir /opt/flinktmp && \
 #  cp -r /opt/flink/ /opt/flinktmp
@@ -151,7 +151,7 @@ RUN set -eux && \
     rm -rf /opt/flink/lib/common/lib/slf4j-log4j12-1.7.25.jar && \
     rm -rf /opt/flink/hudi-flink-bundle_2.11-0.8.0.jar && \
     #rm -rf /opt/flink/hudi-flink_2.11-0.8.0.jar && \
-    rm -rf /opt/flink/flink-parquet-1.8.3.jar && \
+    rm -rf /opt/flink/flink-parquet_2.11-1.12.2.jar && \
     rm -rf /opt/flink/flink-avro-1.9.3.jar && \
     rm -rf /opt/flink/hadoop && \
     rm -rf /opt/flink/hadoop-3.2.1
