--- a/debezium-mysql-connector/Dockerfile
+++ b/debezium-mysql-connector/Dockerfile
@@ -1,5 +1,5 @@
 #编译阶段
-FROM harisekhon/centos-java:latest
+FROM harisekhon/centos-java:latest as builder
 
 WORKDIR /
 
@@ -7,16 +7,21 @@ RUN set -eux && \
     yum install -y openssh-server openssh-clients tar which
     
 RUN set -eux && \
-    yum install -y wget hostname
-    
+    yum install -y wget hostname -o build
+
+#运行阶段
+FROM strimzi/kafka:0.20.1-kafka-2.6.0
+
+WORKDIR /root
+
+USER root:root
+
+COPY  --from=builder /build  .
+
 # 下载debezium tar  ddd
 RUN set -ex; \
    wget https://repo1.maven.org/maven2/io/debezium/debezium-connector-mysql/1.6.0.Final/debezium-connector-mysql-1.6.0.Final-plugin.tar.gz; \
    tar -zxvf debezium-connector-mysql-1.6.0.Final-plugin.tar.gz; \
-
-FROM strimzi/kafka:0.20.1-kafka-2.6.0
-
-USER root:root
   
 RUN mkdir -p /opt/kafka/plugins/debezium
 
