--- a/debezium-mysql-connector/Dockerfile
+++ b/debezium-mysql-connector/Dockerfile
@@ -1,7 +1,5 @@
 #编译阶段
-FROM harisekhon/centos-java:latest as builder
-
-WORKDIR /
+FROM harisekhon/centos-java:latest as build_base
 
 RUN set -eux && \
     yum install -y openssh-server openssh-clients tar which
@@ -9,14 +7,22 @@ RUN set -eux && \
 RUN set -eux && \
     yum install -y wget hostname -o build
 
+COPY project /build/
+
+WORKDIR /build
+
+# 指定容器运行时入口程序 server
+ENTRYPOINT ["/build/server"]
+
+
 #运行阶段
 FROM strimzi/kafka:0.20.1-kafka-2.6.0
 
-WORKDIR /root
-
 USER root:root
 
-COPY  --from=builder /build  .
+COPY --from build_base /build/server .
+#修改环境变量，使之指向动态库的目录
+ENV LD_LIBRARY_PATH=./
 
 # 下载debezium tar  ddd
 RUN set -ex; \
