--- a/debezium-mysql-connector/Dockerfile
+++ b/debezium-mysql-connector/Dockerfile
@@ -23,7 +23,7 @@ USER root:root
 
 RUN mkdir -p /opt/kafka/plugins/debezium
 
-COPY --from build_base /build/debezium-connector-mysql/ /opt/kafka/plugins/debezium/
+COPY --from=build_base /build/debezium-connector-mysql/ /opt/kafka/plugins/debezium/
   
 #COPY ./debezium-connector-mysql/ /opt/kafka/plugins/debezium/
 
